# EDA1_FGA_UnB

./: A.c  CMakeLists.txt  D.c  E.c  F.c  G.c  J.c  README.md  pilha.c
estudos_complementares/: alocacaoDinamica.c  ponteiro_para_funcao.c  realloc.c
formativa1/: B.c  C.c  H.c  I.c
formativa2/: A2.c  B2.c  C2.c  D2.c  E2.c  F2.c
formativa3/: A.c  B.c  C.c  D.c  T.c
formativa4/: A.c  B.c  C.c  D.c  F.c
formativa5/: A.c  B.c  C.c  D.c
formativa6/: A.c  C.c  D.c
somativa1/: busca_binaria.c  pa.c
somativa2/: arvore.c  ctlr_z.c  relatorio_media_atividades.c  turne.c
