cmake_minimum_required(VERSION 3.19)
project(Formativa_1 C)

set(CMAKE_C_STANDARD 99)

add_executable(Formativa_1 formativa2/A2.c formativa2/B2.c formativa2/F2.c estudos_complementares/ponteiro_para_funcao.c formativa2/E2.c formativa2/D2.c estudos_complementares/alocacaoDinamica.c estudos_complementares/realloc.c)